2006-09-20  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Contacts/SOGoContactLDAPEntry.m ([SOGoContactLDAPEntry
	-vCard]): handle the "streetAddress" and "l" fields.

	* UI/Templates/MailerUI/UIxMailEditor.wox: arranged the message
	header fields by converting the tables to DIVs and SPANs.

	* UI/WebServerResources/generic.css: attempted unification of font
	families and size across all the elements. changed the
	logConsole's "position" from "fixed" to "absolute" to avoid
	performance issues.

2006-09-19  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/WebServerResources/ContactsUI.js (uixDeleteSelectedContacts):
	empty the contact view when the current contact is being deleted.

	* UI/WebServerResources/MailerUI.js (newContactFromEmail): fully
	parse the email field and provide the address full name if found
	as the "contactFN" parameter.

	* UI/WebServerResources/generic.js (openMailTo): do not give a
	name to the opened window so that serveral ones can be opened at
	the same time.

	* UI/MailPartViewers/UIxMailPartTextViewer.m
	([UIxMailPartTextViewer -flatContentAsString]): override method by
	replacing carriage returns with "<br />" in the result string from
	super's implementation.

	* UI/Contacts/UIxContactView.m ([UIxContactView
	-_urlOfType:aType]): don't manage non-mailto urls through
	javascript, let the user decide what's best for him.

	* UI/Contacts/UIxContactFoldersView.m ([UIxContactFoldersView
	-newAction]): transfer all the query parameters by using the
	"asURLParameters"'s result string from [self queryParameters].

	* UI/Contacts/UIxContactEditor.m ([UIxContactEditor
	-initSnapshot]): retrieve "contactEmail" and "contactFN" from the
	query parameters and put their values (if any) into the snapshot.

	* UI/Contacts/UIxContactView.m ([UIxContactView -note]): convert
	carriage-returns to "<br />".
	([UIxContactView -workCompany]): explicitly initialize company to
	nil if org is nil or empty.
